--- a/LockWood/Main.storyboard
+++ b/LockWood/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="200">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -8,7 +8,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController" storyboardIdentifier="StockPileView">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -70,10 +70,16 @@
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="3551" translatesAutoresizingMaskIntoConstraints="NO">
                                 <rect key="frame" x="42" y="518" width="73" height="30"/>
                                 <state key="normal" title="Back"/>
+                                <connections>
+                                    <action selector="BackToMainView:" destination="BYZ-38-t0r" id="5003" eventType="touchUpInside"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="3555" translatesAutoresizingMaskIntoConstraints="NO">
                                 <rect key="frame" x="196" y="518" width="65" height="30"/>
                                 <state key="normal" title="Clear"/>
+                                <connections>
+                                    <action selector="ClearButton_TouchUpInside:" destination="BYZ-38-t0r" id="3872" eventType="touchUpInside"/>
+                                </connections>
                             </button>
                         </subviews>
                         <constraints>
@@ -136,7 +142,7 @@
         </scene>
         <scene sceneID="199">
             <objects>
-                <viewController id="200" sceneMemberID="viewController">
+                <viewController id="200" sceneMemberID="viewController" customClass="MainScreenViewController" storyboardIdentifier="MainScreenViewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="197"/>
                         <viewControllerLayoutGuide type="bottom" id="198"/>
@@ -145,11 +151,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="4166" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES">
+                                <rect key="frame" x="35" y="507" width="94" height="30"/>
+                                <state key="normal" title="Stockpile info"/>
+                                <connections>
+                                    <action selector="ChangToStockpileView:" destination="200" id="4463" eventType="touchUpInside"/>
+                                </connections>
+                            </button>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="6133" translatesAutoresizingMaskIntoConstraints="NO" fixedFrame="YES" image="snrLogo.png">
+                                <rect key="frame" x="35" y="78" width="240" height="210"/>
+                            </imageView>
+                        </subviews>
                     </view>
+                    <connections>
+                        <outlet property="StockPIleInfoButton" destination="4166" id="name-outlet-4166"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="202" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="606" y="8"/>
+            <point key="canvasLocation" x="-420" y="10"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="snrLogo.png" width="177" height="79"/>
+    </resources>
 </document>
